--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "recharts": "^2.2.0",
     "tinycolor2": "^1.6.0",
     "typescript": "^4.9.4",
-    "wagmi": "^0.7.15"
+    "wagmi": "^0.7.15",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
