--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "shelljs": "^0.8.5",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "tailwindcss": "^3.2.7",
     "type-graphql": "^1.1.1",
     "typechain": "^8.1.1",
     "url": "^0.11.0",
