bridge start + swap dependency bug

--- a/package.json
+++ b/package.json
@@ -45,22 +45,9 @@
     "@rainbow-me/rainbowkit": "^0.7.4",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.2.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
     "@types/recharts": "^1.8.24",
-    "@uniswap/widgets": "^2.51.0",
+    "@uniswap/widgets": "^2.51.1",
     "@vitejs/plugin-react-swc": "^3.0.1",
-    "@walletconnect/ethereum-provider": "^1.7.1",
-    "@web3-react/core": "^8.0.22-beta.0",
-    "@web3-react/empty": "^8.0.11-beta.0",
-    "@web3-react/metamask": "^8.0.18-beta.0",
-    "@web3-react/types": "^8.0.11-beta.0",
-    "@web3-react/walletconnect": "^8.0.25-beta.0",
     "axios": "^1.2.1",
     "class-validator": "^0.14.0",
     "date-fns": "^2.29.3",
@@ -70,6 +57,8 @@
     "graphql": "^15.8.0",
     "graphql-request": "^5.1.0",
     "graphql-tag": "^2.0.0",
+    "jotai": "^2.0.3",
+    "jotai-immer": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ga": "^3.3.1",
@@ -79,14 +68,12 @@
     "react-markdown": "^8.0.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.0",
     "react-step-progress-bar": "^1.0.3",
     "react-uid": "^2.3.2",
     "recharts": "^2.2.0",
     "tinycolor2": "^1.6.0",
-    "typescript": "^4.4.2",
+    "typescript": "^4.9.4",
     "wagmi": "^0.7.15",
-    "web-vitals": "^2.1.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
