--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@emotion/styled": "^11.10.5",
     "@ethersproject/address": "^5.6.1",
     "@ethersproject/providers": "^5.7.1",
+    "@headlessui/react": "^1.7.14",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@mui/system": "^5.11.8",
@@ -45,6 +46,9 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.2.3",
     "@types/recharts": "^1.8.24",
+    "@uniswap/sdk-core": "^3.2.2",
+    "@uniswap/v3-sdk": "^3.9.0",
+    "@uniswap/widgets": "^2.51.1",
     "@vitejs/plugin-react-swc": "^3.0.1",
     "axios": "^1.2.1",
     "class-validator": "^0.14.0",
@@ -57,9 +61,11 @@
     "graphql-tag": "^2.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-feather": "^2.0.10",
     "react-ga": "^3.3.1",
     "react-ga4": "^1.4.1",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
     "react-markdown": "^8.0.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
@@ -104,7 +110,7 @@
     "@vitest/coverage-c8": "^0.28.1",
     "@vitest/ui": "^0.27.0",
     "assert": "^2.0.0",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "css-mediaquery": "^0.1.2",
     "eslint": "^8.31.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -129,7 +135,7 @@
     "lint-staged": "^13.1.0",
     "node-watch": "^0.7.1",
     "os-browserify": "^0.3.0",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.22",
     "prettier": "^2.8.2",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
@@ -139,6 +145,7 @@
     "shelljs": "^0.8.5",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "tailwindcss": "^3.3.1",
     "type-graphql": "^1.1.1",
     "typechain": "^8.1.1",
     "url": "^0.11.0",
