--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-uid": "^2.3.2",
     "recharts": "^2.2.0",
     "tinycolor2": "^1.6.0",
+    "typechain-target-react-query-wagmi": "^0.1.0",
     "typescript": "^4.9.4",
     "wagmi": "^0.7.15",
     "yarn": "^1.22.19"
