starting bridge integration

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-uid": "^2.3.2",
     "recharts": "^2.2.0",
     "tinycolor2": "^1.6.0",
+    "typechain-target-react-query-wagmi": "^0.1.0",
     "typescript": "^4.4.2",
     "wagmi": "^0.7.15",
     "web-vitals": "^2.1.0",
