--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@types/recharts": "^1.8.24",
     "@uniswap/sdk-core": "^3.2.2",
     "@uniswap/v3-sdk": "^3.9.0",
-    "@uniswap/widgets": "^2.51.1",
+    "@uniswap/widgets": "^2.51.2",
     "@vitejs/plugin-react-swc": "^3.0.1",
     "@walletconnect/ethereum-provider": "^1.7.1",
     "@web3-react/core": "^8.0.22-beta.0",
@@ -72,6 +72,7 @@
     "graphql": "^15.8.0",
     "graphql-request": "^5.1.0",
     "graphql-tag": "^2.0.0",
+    "jsbi": "3.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.10",
