--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@mui/system": "^5.11.8",
+    "@mui/utils": "^5.12.3",
     "@mui/x-data-grid": "^5.17.17",
     "@olympusdao/component-library": "^3.1.0",
     "@rainbow-me/rainbowkit": "^0.7.4",
@@ -50,6 +51,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
+    "@types/prop-types": "^15.7.5",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/recharts": "^1.8.24",
