--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.7.14",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@ethersproject/address": "^5.6.1",
@@ -71,10 +72,11 @@
     "date-fns-tz": "^1.3.7",
     "ethers": "^5.7.2",
     "get-value": "^3.0.1",
-    "graphql": "^15.8.0",
+    "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
     "graphql-tag": "^2.0.0",
     "jsbi": "3.1.4",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.10",
@@ -157,7 +159,6 @@
     "postcss": "^8.4.22",
     "prettier": "^2.8.2",
     "process": "^0.11.10",
-    "prop-types": "^15.8.1",
     "resize-observer-polyfill": "^1.5.1",
     "rollup-plugin-polyfill-node": "^0.12.0",
     "sass": "^1.57.1",
