updated ui + buttons

--- a/.env.local
+++ b/.env.local
@@ -2,6 +2,11 @@
 # Covalent (https://www.covalenthq.com/)
 VITE_COVALENT_API_KEY=""
 
+# Required
+# Infura RPC URL
+MAINNET_VITE_INFURA_URL_KEY="https://mainnet.infura.io/v3/b42fdbed6f7d4990a5f1fed9c4599ad2"
+GOERLI_VITE_INFURA_URL_KEY="https://goerli.infura.io/v3/b42fdbed6f7d4990a5f1fed9c4599ad2"
+
 # Optional
 # Toggle to "true" to use Olympus Give features
 VITE_GIVE_ENABLED="true"
