--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@olympusdao/component-library": "^3.1.0",
     "@rainbow-me/rainbowkit": "^0.7.4",
     "@reduxjs/toolkit": "^1.9.1",
+    "@rollup/plugin-commonjs": "^25.0.0",
     "@tanstack/react-query": "^4.2.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -76,7 +77,6 @@
     "graphql-request": "^5.1.0",
     "graphql-tag": "^2.0.0",
     "jsbi": "3.1.4",
-    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.10",
