--- a/package.json
+++ b/package.json
@@ -91,6 +91,9 @@
     "react-step-progress-bar": "^1.0.3",
     "react-uid": "^2.3.2",
     "recharts": "^2.2.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "tinycolor2": "^1.6.0",
     "typechain-target-react-query-wagmi": "^0.1.0",
     "typescript": "^4.4.2",
@@ -173,6 +176,9 @@
     "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.23.1"
+  },
+  "peerDependencies": {
+    "prop-types": "^15.8.1"
   },
   "scripts": {
     "build": "yarn vite build",
