--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@mui/system": "^5.11.8",
-    "@mui/utils": "^5.12.3",
+    "@mui/utils": "^5.13.1",
     "@mui/x-data-grid": "^5.17.17",
     "@olympusdao/component-library": "^3.1.0",
     "@rainbow-me/rainbowkit": "^0.7.4",
@@ -91,6 +91,7 @@
     "react-step-progress-bar": "^1.0.3",
     "react-uid": "^2.3.2",
     "recharts": "^2.2.0",
+    "rollup-plugin-commonjs": "^10.1.0",
     "tinycolor2": "^1.6.0",
     "typechain-target-react-query-wagmi": "^0.1.0",
     "typescript": "^4.4.2",
