--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "swr": "^2.1.5",
     "tinycolor2": "^1.6.0",
     "typechain-target-react-query-wagmi": "^0.1.0",
     "typescript": "^4.4.2",
