--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "graphql-request": "^5.1.0",
     "graphql-tag": "^2.0.0",
     "jsbi": "3.1.4",
+    "node-fetch": "^3.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.10",
