updated address for final testing

--- a/.env.local
+++ b/.env.local
@@ -44,3 +44,5 @@ VITE_ARBITRUM_TESTNET_NODE_URL=""
 
 VITE_AVALANCHE_NODE_URL=""
 VITE_AVALANCHE_TESTNET_NODE_URL=""
+
+CHAINBASE_API_KEY="2QdeV6wTe6gyLAPT7C8JvjH5Gy8"
