--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@web3-react/metamask": "^8.0.18-beta.0",
     "@web3-react/types": "^8.0.11-beta.0",
     "@web3-react/walletconnect": "^8.0.25-beta.0",
+    "api": "^5.0.8",
     "axios": "^1.2.1",
     "class-validator": "^0.14.0",
     "date-fns": "^2.29.3",
