--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/prop-types": "^15.7.5",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-scroll": "^1.8.7",
     "@types/recharts": "^1.8.24",
     "@uniswap/sdk-core": "^3.2.2",
     "@uniswap/v3-sdk": "^3.9.0",
@@ -89,6 +90,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.9",
     "react-step-progress-bar": "^1.0.3",
     "react-uid": "^2.3.2",
     "recharts": "^2.2.0",
